--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -249,6 +249,7 @@ public without sharing class AccountSettingsController {
         public Participant__c participant;
         public String userName;
      	public Boolean isDelegate;
+        public String message;
         @AuraEnabled
         public List<CookieSettings> cookieSettings;
     }
