--- a/force-app/main/default/classes/LabelValueItem.cls
+++ b/force-app/main/default/classes/LabelValueItem.cls
@@ -3,8 +3,8 @@
  */
 
 public without sharing class LabelValueItem {
-    public String label;
-    public String value;
+    @AuraEnabled public String label;
+    @AuraEnabled public String value;
 
     public LabelValueItem(String label, String value){
         this.label = label;
