--- a/force-app/main/default/classes/MotivationalMessagesRemote.cls
+++ b/force-app/main/default/classes/MotivationalMessagesRemote.cls
@@ -41,9 +41,8 @@ public without sharing class MotivationalMessagesRemote {
                 return TranslateHelper.getLabelValue(messageForShow.Custom_Label_Name__c);
             }
         }catch (Exception e){
-            AuraHelper.throwException(e);
+            (String)AuraHelper.throwException(e);
         }
-        return null;
     }
 
 }
