--- a/force-app/main/default/classes/ReferringRemote.cls
+++ b/force-app/main/default/classes/ReferringRemote.cls
@@ -77,7 +77,7 @@ public without sharing class ReferringRemote {
 //            aw.clinic = site;
 //            initData.studies.add(aw);
             initData.countries = CountryStateUtil.getCountries();
-            initData.genders = getGenders();
+            initData.genders = ParticipantService.getGenderLVList();
             initData.statesByCountryMap = CountryStateUtil.getStatesByCountryMap();
             return JSON.serialize(initData);
         /*}catch (Exception e){
@@ -172,11 +172,5 @@ public without sharing class ReferringRemote {
             User.StateCode
     );
 
-    private static List<LabelValueItem> getGenders(){
-        List<LabelValueItem> genders = new List<LabelValueItem>();
-        genders.add(new LabelValueItem(Label.Gender_Male, Label.Gender_Male));
-        genders.add(new LabelValueItem(Label.Gender_Female, Label.Gender_Female));
-        return genders;
-    }
     
 }
