--- a/force-app/main/default/classes/StudyActionsParticipant.cls
+++ b/force-app/main/default/classes/StudyActionsParticipant.cls
@@ -17,65 +17,70 @@ public class StudyActionsParticipant extends StudyActions {
         );
 
         actions = new Map<String, Action>();
-
-        ParticipantService.ParticipantStates participantStateValue = ParticipantService.getParticipantState().value;
-        if (participantStateValue != ParticipantService.ParticipantStates.ALUMNI) {
-            studyDetailActions.add(new Action(
-                    'downloadConsent',
-                    TranslateHelper.getLabelValue('BTN_View_Download_Consent'),
-                    'icon-import',
-                    false
-            ));
-        }
-        if(participantStateValue == ParticipantService.ParticipantStates.PARTICIPANT && study.Terms_And_Conditions_ID__c != null) {
-            studyDetailActions.add(new Action(
-                    'viewTermsAndConditions',
-                    TranslateHelper.getLabelValue('BTN_View_terms_and_conditions'),
-                    'paper-many',
-                    false
-            ));
-        }
-
-        if (participantStateValue != ParticipantService.ParticipantStates.ALUMNI) {
-            actions.put('facebook', new Action(
-                    'facebook',
-                    '',
-                    'icon-facebook',
-                    false
-            )) ;
-            actions.put('twitter', new Action(
-                    'twitter',
-                    '',
-                    'icon-twitter',
-                    false
-            )) ;
-            actions.put('linkedin', new Action(
-                    'linkedin',
-                    '',
-                    'icon-linkedin',
-                    false
-            ));
-            actions.put('envelope', new Action(
-                    ACT_SHARE,
-                    '',
-                    'icon-envelope',
-                    false
-            ));
-
-            studyDetailActions.add(new Action(
-                    'shares',
-                    LABEL_SHARE,
-                    'share',
-                    false
-            ));
-        }
-
-        studyDetailActions.add(new Action(
-                'backHome',
-                TranslateHelper.getLabelValue('Link_Back_To_Home'),
+        
+        actions.put(ACT_SHARE_FACEBOOK, new Action(
+                ACT_SHARE_FACEBOOK,
+                LABEL_SHARE,
+                'icon-facebook',
+                false
+        )) ;
+        actions.put(ACT_SHARE_TWITTER, new Action(
+                ACT_SHARE_TWITTER,
+                LABEL_SHARE,
+                'icon-twitter',
+                false
+        )) ;
+        actions.put(ACT_SHARE_LINKEDIN, new Action(
+                ACT_SHARE_LINKEDIN,
+                LABEL_SHARE,
+                'icon-linkedin',
+                false
+        ));
+        actions.put(ACT_SHARE_EMAIL, new Action(
+                ACT_SHARE_EMAIL,
+                LABEL_SHARE,
+                'icon-envelope',
+                false
+        ));
+        
+        actions.put(ACT_VIEW_TC, new Action(
+                ACT_VIEW_TC,
+                LABEL_VIEW_TC,
+                'paper-many',
+                false
+        ));
+        
+        actions.put(ACT_DOWNLOAD_CONSENT, new Action(
+                ACT_DOWNLOAD_CONSENT,
+                LABEL_DOWNLOAD_CONSENT,
+                'icon-import',
+                false
+        ));
+        
+        actions.put(ACT_HOME, new Action(
+                ACT_HOME,
+                LABEL_HOME,
                 'icon-home-brand-new',
                 false
         ));
+
+        ParticipantService.ParticipantStates participantStateValue = ParticipantService.getParticipantState().value;
+        if (participantStateValue != ParticipantService.ParticipantStates.ALUMNI) studyDetailActions.add(actions.get(ACT_DOWNLOAD_CONSENT));
+        
+        if(participantStateValue == ParticipantService.ParticipantStates.PARTICIPANT && study.Terms_And_Conditions_ID__c != null) {
+            studyDetailActions.add(actions.get(ACT_VIEW_TC));
+        }
+
+        if (participantStateValue != ParticipantService.ParticipantStates.ALUMNI) {
+            studyDetailActions.add(actions.get(ACT_SHARE_EMAIL));
+            studyDetailActions.add(actions.get(ACT_SHARE_FACEBOOK));
+            studyDetailActions.add(actions.get(ACT_SHARE_LINKEDIN));
+            studyDetailActions.add(actions.get(ACT_SHARE_TWITTER));
+        }
+    
+        studyDetailActions.add(actions.get(ACT_HOME));
+
+
     }
 
 }
