--- a/force-app/main/default/classes/StudySiteService.cls
+++ b/force-app/main/default/classes/StudySiteService.cls
@@ -255,14 +255,12 @@ public without sharing class StudySiteService {
         public HCP_Enrollment__c hcpe;
         public Map<String, StudyActions.Action> actions;
         public String sortType;
-        public Boolean hasPatients;
         public Boolean hasActiveHCPE;
         public Datetime hcpCreatedDate;
 
-        public StudySiteDistanceWrapper(Study_Site__c site, HCP_Enrollment__c hcpe, String sortType, Boolean hasPatients) {
+        public StudySiteDistanceWrapper(Study_Site__c site, HCP_Enrollment__c hcpe, String sortType) {
             this.site = site;
             this.distance = DistanceHelper.calculateDistanceTo(site.Site__r);
-            this.hasPatients = hasPatients;
             this.formatedDistance = ((distance * 10).round() / 10.0).format() + '&nbsp;' + DistanceHelper.getUnitsOfMeasurementLabel();
             if (sortType != null && sortType != '') {
                 this.sortType = sortType;
@@ -319,7 +317,6 @@ public without sharing class StudySiteService {
         List<StudySiteDistanceWrapper> result = new List<StudySiteService.StudySiteDistanceWrapper>();
         Set<Id> quueriedTrials = new Set<Id>();
         Set<Id> siteIds = new Set<Id>();
-        Set<Id> siteWithPatientsIds = new Set<Id>();
         for (Study_Site__c site : siteList) {
             quueriedTrials.add(site.Clinical_Trial_Profile__c);
             siteIds.add(site.Id);
@@ -330,19 +327,9 @@ public without sharing class StudySiteService {
         for (HCP_Enrollment__c hcpe : enrollments) {
             hcpeMap.put(hcpe.Study_Site__c, hcpe);
         }
-        for (Participant_Enrollment__c pe : [
-                SELECT Id, Study_Site__c
-                FROM Participant_Enrollment__c
-                WHERE Study_Site__c IN :siteIds
-                AND Participant_Status__c NOT IN (:ParticipantEnrollmentService.PART_STATUS_FAILED_REVIEW,
-                        :ParticipantEnrollmentService.PART_STATUS_PENDING_REFERRAL,
-                        :ParticipantEnrollmentService.PART_STATUS_EXCLUDED_FROM_REFERRING)
-        ]) {
-            siteWithPatientsIds.add(pe.Study_Site__c);
-        }
         for (Study_Site__c site : siteList) {
             if (site.Clinical_Trial_Profile__r != null && (!filterEmptyHCPE || hcpeMap.containsKey(site.Id))) {
-                StudySiteDistanceWrapper siteWrapper = new StudySiteDistanceWrapper(site, hcpeMap.get(site.Id), filter.sortType, siteWithPatientsIds.contains(site.Id));
+                StudySiteDistanceWrapper siteWrapper = new StudySiteDistanceWrapper(site, hcpeMap.get(site.Id), filter.sortType);
                 result.add(siteWrapper);
             }
         }
